<?xml version="1.0"?>
<package>
  <name>brica_pipe</name>
  <version>0.0.0</version>
  <description>The brica_pipe package</description>

  <maintainer email="kotone@sfc.keio.ac.jp">kotone</maintainer>

  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
